--- a/Projects/Drawing/css/shape.css
+++ b/Projects/Drawing/css/shape.css
@@ -34,7 +34,7 @@ html {
 
 body {
     color: white;
-    background: linear-gradient( rgba(255, 254, 255, 0.8), rgba(255, 254, 255, 1)), url(img/monika-grabkowska-tv-d1R3FItE-unsplash.jpg) no-repeat center / cover;
+    background: linear-gradient( rgba(255, 254, 255, 0.8), rgba(255, 254, 255, 1)), url(../img/monika-grabkowska-tv-d1R3FItE-unsplash.jpg) no-repeat center / cover;
     font-family: 'Cormorant_Garamond', Arial, Helvetica, san-serif;
 }
 
@@ -61,13 +61,18 @@ p+div {
     text-align: start;
 }
 
-.col-content .code {
-    color: #c39bd4b6;
+.col-content .code p {
+    color: #a473b9b6;
     text-align: start;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
-    margin: 10px 10px 5px 45px;
+    margin: 0 auto;
     line-height: 1.75em;
+}
+
+.col-content .code p .class {
+    font-weight: bold;
+    color: #a550b4b6;
 }
 
 
@@ -99,7 +104,7 @@ h2 {
     color: white;
     padding: 20px 10%;
     letter-spacing: 1.5px;
-    background: linear-gradient( rgba(216, 191, 216, 0.78), rgba(216, 191, 216, 0.78)), url(img/monika-grabkowska-tv-d1R3FItE-unsplash.jpg) no-repeat center;
+    background: linear-gradient( rgba(216, 191, 216, 0.78), rgba(216, 191, 216, 0.78)), url(../img/monika-grabkowska-tv-d1R3FItE-unsplash.jpg) no-repeat center;
 }
 
 .main-header p {
@@ -172,7 +177,7 @@ h2 {
     height: 0;
     border-left: 60px solid transparent;
     border-right: 60px solid transparent;
-    border-bottom: 100px solid #d096eb;
+    border-bottom: 100px solid #e1d5f1;
     position: relative;
 }
 
@@ -181,12 +186,85 @@ h2 {
     height: 0;
     border-left: 60px solid transparent;
     border-right: 60px solid transparent;
-    border-top: 100px solid #d096eb;
-    position: absolute;
+    border-top: 100px solid #e1d5f1;
     content: "";
     top: 30px;
-    left: -70px;
+    left: -60px;
     position: absolute;
+}
+
+
+/* buttons */
+
+button {
+    background-color: thistle;
+    border: 2px solid thistle;
+    border-radius: 10%;
+    font-size: 14px;
+    padding: 5px 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: solid;
+    color: white;
+    margin: 0 10px;
+}
+
+
+/* heart */
+
+.heart {
+    margin-top: 30px;
+    margin-right: 60px;
+    position: relative;
+    width: 100px;
+    height: 90px;
+}
+
+.heart::before,
+.heart::after {
+    position: absolute;
+    content: "";
+    left: 84px;
+    top: 0;
+    width: 85px;
+    height: 125px;
+    background: rgb(238, 185, 213);
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.heart:after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+.heart-parted {
+    margin-top: 30px;
+    position: relative;
+    width: 100px;
+    height: 90px;
+}
+
+.heart-parted::before,
+.heart-parted::after {
+    position: absolute;
+    content: "";
+    left: -60px;
+    top: 0;
+    width: 85px;
+    height: 125px;
+    background: rgb(238, 185, 213);
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.heart-parted:after {
+    left: 36px;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
 }
 
 footer {
@@ -196,6 +274,22 @@ footer {
 }
 
 @media (min-width: 764px) {
+    .heart-parted::before,
+    .heart-parted::after {
+        left: 84px;
+    }
+    .heart-parted:after {
+        left: 136px;
+    }
+    .code {
+        display: block;
+        height: 180px;
+        width: 45%;
+        padding: 5%;
+        overflow: scroll;
+        background-color: rgba(216, 191, 216, 0.18);
+        border-radius: 5%;
+    }
     .col {
         float: left;
         height: 70rem;
@@ -213,14 +307,16 @@ footer {
         float: left;
         margin-bottom: 10px;
     }
-    .code {
-        float: left;
-        margin-left: 30px;
-        width: 40%;
-    }
     .clearfix::after {
         content: " ";
         display: table;
         clear: both;
+    }
+}
+
+@media (min-width: 945px) {
+    .code {
+        float: right;
+        margin-right: 30px;
     }
 }
