--- a/Projects/Drawing/css/shape.css
+++ b/Projects/Drawing/css/shape.css
@@ -68,6 +68,12 @@ p+div {
     font-size: 1.5rem;
     margin: 0 auto;
     line-height: 1.75em;
+    display: block;
+    height: 180px;
+    padding: 5%;
+    overflow: scroll;
+    background-color: rgba(216, 191, 216, 0.18);
+    border-radius: 5%;
 }
 
 .col-content .code p .class {
@@ -179,6 +185,7 @@ h2 {
     border-right: 60px solid transparent;
     border-bottom: 100px solid #e1d5f1;
     position: relative;
+    margin-bottom: 50px;
 }
 
 .star-six::after {
@@ -214,7 +221,8 @@ button {
 
 .heart {
     margin-top: 30px;
-    margin-right: 60px;
+    margin-right: 135px;
+    margin-bottom: 80px;
     position: relative;
     width: 100px;
     height: 90px;
@@ -251,7 +259,7 @@ button {
 .heart-parted::after {
     position: absolute;
     content: "";
-    left: -60px;
+    left: -38px;
     top: 0;
     width: 85px;
     height: 125px;
