--- a/Projects/Drawing/css/shape.css
+++ b/Projects/Drawing/css/shape.css
@@ -64,19 +64,41 @@ p+div {
 .col-content p {
     color: #6e556e;
     text-align: start;
+    line-height: 1.75em;
 }
 
-.col-content .code p {
+
+/* .code {
     color: #a473b9b6;
     text-align: start;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     margin: 0 auto;
-    line-height: 1.75em;
     display: block;
     height: 180px;
     padding: 5%;
     border-radius: 5%;
+    overflow: scroll;
+    -ms-overflow-style: none;
+}
+
+
+.code::-webkit-scrollbar {
+    display: none;
+} */
+
+.code {
+    display: block;
+    width: 80%;
+    padding: 5%;
+    overflow: scroll;
+    background-color: rgba(236, 221, 236, 0.08);
+    border-radius: 5%;
+    -ms-overflow-style: none;
+}
+
+.code::-webkit-scrollbar {
+    display: none;
 }
 
 .col-content .code p .class {
@@ -113,6 +135,7 @@ h2 {
     color: white;
     letter-spacing: 1.5px;
     background: linear-gradient( rgba(216, 191, 216, 0.78), rgba(216, 191, 216, 0.78)), url(../img/monika-grabkowska-tv-d1R3FItE-unsplash.jpg) no-repeat center;
+    margin-bottom: 35px;
 }
 
 #main-header-container {
@@ -128,11 +151,11 @@ h2 {
 /* navigation */
 
 #main-nav {
-    margin: 10px auto 5px;
+    margin: 0 auto 5px;
     color: white;
     overflow: hidden;
-    background-color: #d8bfd86b;
-    margin-top: 35px;
+    background-color: #e6d3e6;
+    z-index: 99;
 }
 
 #main-nav a {
@@ -151,6 +174,12 @@ h2 {
 
 #main-nav a:-webkit-any-link {
     color: white;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .sticky+.content {
@@ -348,81 +377,59 @@ footer {
     .heart-parted:after {
         left: 136px;
     }
-    .code {
-        display: block;
-        height: 180px;
-        width: 45%;
-        padding: 5%;
+    .col {
+        float: left;
+        height: 70rem;
+        width: 48%;
+        margin-right: 2%;
+    }
+    .col:last-child {
+        margin-right: 0;
+    }
+    .col-content {
+        height: 60rem;
         overflow: scroll;
-        background-color: rgba(236, 221, 236, 0.08);
-        border-radius: 5%;
         -ms-overflow-style: none;
     }
-    .code::-webkit-scrollbar {
+    .col-content::-webkit-scrollbar {
         display: none;
+    }
+    .graph {
+        float: left;
+        margin-bottom: 10px;
+    }
+    .clearfix::after {
+        content: " ";
+        display: table;
+        clear: both;
     }
 }
 
-.col {
-    float: left;
-    height: 70rem;
-    width: 48%;
-    margin-right: 2%;
-}
-
-.col:last-child {
-    margin-right: 0;
-}
-
-.col-content {
-    height: 60rem;
-    overflow: scroll;
-    -ms-overflow-style: none;
-}
-
-.col-content::-webkit-scrollbar {
-    display: none;
-}
-
-.graph {
-    float: left;
-    margin-bottom: 10px;
-}
-
-.clearfix::after {
-    content: " ";
-    display: table;
-    clear: both;
-}
-
-
-}
 @media (min-width: 945px) {
     .code {
         float: right;
         margin-right: 30px;
     }
 }
+
 @media (max-width: 414px) {
     #heart-container {
         padding-right: 25%;
     }
 }
+
 @media (max-width: 479px) {
     #main-nav a {
         font-size: 2rem;
         width: 100%;
     }
-    
     #main-header-container {
         padding: 25px 0;
     }
-    
     #main-header h1 {
         font-size: 2.8rem;
         line-height: normal;
     }
-    
     #main-header p {
         font-size: 1.8rem;
     }
